# py-snes

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  PPU_PLAN.md  README.md  ROM_TESTING.md  TEST_FRAMEWORK_GUIDE.md  pyproject.toml
.github/workflows/: ci.yaml
src/pysnes/: __init__.py  bindings.cpp  cli.py  env.py
src/pysnes/snes/: SConstruct
src/pysnes/snes/include/: bus.hpp  cartridge.hpp  controller.hpp  cpu.hpp  cpu_addressing.hpp  cpu_helpers.hpp  cpu_instructions.hpp  ppu.hpp  snes.hpp
src/pysnes/snes/src/: bus.cpp  cartridge.cpp  controller.cpp  cpu.cpp  cpu_addressing.cpp  cpu_helpers.cpp  cpu_instructions.cpp  ppu.cpp  snes.cpp
tests/: test_arithmetic_v2.cpp  test_branch.cpp  test_comparison.cpp  test_control.cpp  test_cpu.cpp  test_framework.cpp  test_framework.hpp  test_framework_tests.cpp  test_incdec.cpp  test_jump_subroutine.cpp  test_logical.cpp  test_ppu  test_ppu.cpp  test_rom.cpp  test_shift_rotate.cpp  test_stack.cpp  test_status_flags.cpp  test_transfer.cpp
tests/config/: test_config.json
tests/python/: test_framebuffer.py
tests/scripts/: run_comprehensive_tests.py  run_rom_tests.py
tools/: cleanup_tests.py  rom_analyzer.py
