[project]
name = "pysnes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jared Trouth", email = "jtrouth@burwood.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "gymnasium>=1.2.0",
]

[project.scripts]
pysnes = "pysnes:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "scons>=4.9.1",
]
