[project]
name = "pysnes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jared Trouth", email = "jtrouth@burwood.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "gymnasium>=1.2.0",
    "numpy",
    "pybind11>=3.0.0",
    "scikit-build-core",
]

[project.scripts]
pysnes = "pysnes:cli"

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/pysnes"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.ipy?$'

[tool.isort]
profile = "black"
